--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -1,8 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_write">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/ib_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/ic_cancel"/>
+
+            <TextView
+                style="@style/TopTextView"
+                android:layout_centerInParent="true"
+                android:text="@string/title_write"/>
+
+            <ImageButton
+                android:id="@+id/ib_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/ic_save"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_edittext"
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="6">
+
+        <EditText
+            android:id="@+id/et_write"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:hint="@string/hint_write"
+            android:inputType="textMultiLine"
+            android:padding="30dp">
+
+            <requestFocus/>
+        </EditText>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_meta"
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="1">
+
+        <LinearLayout
+            style="@style/HorizontalLinearLayout"
+            android:layout_weight="1"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/tv_place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:textSize="12sp"
+                tools:text="어딘가에서"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/HorizontalLinearLayout"
+            android:layout_weight="1"
+            android:gravity="center_vertical|end">
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:textSize="12sp"
+                tools:text="2018년 3월 7일"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <ImageButton
+            android:id="@+id/ib_background"
+            style="@style/IconImageButton"
+            android:background="@drawable/ic_background"/>
+
+        <ImageButton
+            android:id="@+id/ib_place"
+            style="@style/IconImageButton"
+            android:background="@drawable/ic_place"/>
+
+        <ImageButton
+            android:id="@+id/ib_font"
+            style="@style/IconImageButton"
+            android:background="@drawable/ic_font"/>
+
+        <ImageButton
+            android:id="@+id/ib_size_down"
+            style="@style/IconImageButton"
+            android:background="@drawable/ic_size_down"/>
+
+        <ImageButton
+            android:id="@+id/ib_size_up"
+            style="@style/IconImageButton"
+            android:background="@drawable/ic_size_up"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="2">
+
+        <LinearLayout
+            style="@style/HorizontalLinearLayout"
+            android:layout_weight="2"
+            android:orientation="vertical">
+
+            <LinearLayout
+                style="@style/VerticalLinearLayout"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <dev.kxxcn.app_with.util.StateButton
+                    android:id="@+id/btn_item_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:text="@string/btn_primary"
+                    app:normalStrokeColor="@color/btn_bottom_item"
+                    app:normalStrokeWidth="1dp"
+                    app:normalTextColor="@color/btn_bottom_item"
+                    app:pressedStrokeColor="@color/btn_bottom_item"
+                    app:pressedStrokeWidth="1dp"
+                    app:pressedTextColor="@color/btn_bottom_item"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/VerticalLinearLayout"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <dev.kxxcn.app_with.util.StateButton
+                    android:id="@+id/btn_item_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:text="@string/btn_gallery"
+                    app:normalStrokeColor="@color/btn_bottom_item"
+                    app:normalStrokeWidth="1dp"
+                    app:normalTextColor="@color/btn_bottom_item"
+                    app:pressedStrokeColor="@color/btn_bottom_item"
+                    app:pressedStrokeWidth="1dp"
+                    app:pressedTextColor="@color/btn_bottom_item"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/HorizontalLinearLayout"
+            android:layout_weight="8">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_theme"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
