--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -44,55 +44,61 @@
     <LinearLayout
         android:id="@+id/ll_edittext"
         style="@style/VerticalLinearLayout"
-        android:layout_weight="6">
-
-        <EditText
-            android:id="@+id/et_write"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:hint="@string/hint_write"
-            android:inputType="textMultiLine"
-            android:padding="30dp">
-
-            <requestFocus/>
-        </EditText>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_meta"
-        style="@style/VerticalLinearLayout"
-        android:layout_weight="1">
+        android:layout_weight="7"
+        android:orientation="vertical">
 
         <LinearLayout
-            style="@style/HorizontalLinearLayout"
-            android:layout_weight="1"
-            android:gravity="center_vertical">
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="7">
 
-            <TextView
-                android:id="@+id/tv_place"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:textSize="12sp"
-                tools:text="어딘가에서"/>
+            <EditText
+                android:id="@+id/et_write"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:hint="@string/hint_write"
+                android:inputType="textMultiLine"
+                android:padding="30dp">
+
+                <requestFocus/>
+            </EditText>
 
         </LinearLayout>
 
         <LinearLayout
-            style="@style/HorizontalLinearLayout"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end">
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:textSize="12sp"
-                tools:text="2018년 3월 7일"/>
+            <LinearLayout
+                style="@style/HorizontalLinearLayout"
+                android:layout_weight="1"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/tv_place"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:textSize="12sp"
+                    tools:text="어딘가에서"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/HorizontalLinearLayout"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:textSize="12sp"
+                    tools:text="2018년 3월 7일"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
