--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -42,65 +42,82 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ll_edittext"
         style="@style/VerticalLinearLayout"
         android:layout_weight="7"
         android:orientation="vertical">
 
-        <LinearLayout
-            style="@style/VerticalLinearLayout"
-            android:layout_weight="7">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/et_write"
+            <ImageView
+                android:id="@+id/iv_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:gravity="center"
-                android:hint="@string/hint_write"
-                android:inputType="textMultiLine"
-                android:padding="30dp">
+                android:orientation="vertical">
 
-                <requestFocus/>
-            </EditText>
+                <LinearLayout
+                    style="@style/VerticalLinearLayout"
+                    android:layout_weight="7">
 
-        </LinearLayout>
+                    <EditText
+                        android:id="@+id/et_write"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:gravity="center"
+                        android:hint="@string/hint_write"
+                        android:inputType="textMultiLine"
+                        android:padding="30dp">
 
-        <LinearLayout
-            style="@style/VerticalLinearLayout"
-            android:layout_weight="1">
+                        <requestFocus/>
+                    </EditText>
 
-            <LinearLayout
-                style="@style/HorizontalLinearLayout"
-                android:layout_weight="1"
-                android:gravity="center_vertical">
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_place"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:textSize="12sp"
-                    tools:text="어딘가에서"/>
+                <LinearLayout
+                    style="@style/VerticalLinearLayout"
+                    android:layout_weight="1">
+
+                    <LinearLayout
+                        style="@style/HorizontalLinearLayout"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/tv_place"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:textSize="12sp"
+                            tools:text="어딘가에서"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        style="@style/HorizontalLinearLayout"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical|end">
+
+                        <TextView
+                            android:id="@+id/tv_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="20dp"
+                            android:textSize="12sp"
+                            tools:text="2018년 3월 7일"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <LinearLayout
-                style="@style/HorizontalLinearLayout"
-                android:layout_weight="1"
-                android:gravity="center_vertical|end">
-
-                <TextView
-                    android:id="@+id/tv_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:textSize="12sp"
-                    tools:text="2018년 3월 7일"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
