--- a/app/src/main/res/xml/bottombar_tabs_color_changing.xml
+++ b/app/src/main/res/xml/bottombar_tabs_color_changing.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tabs>
     <tab
-        barColorWhenSelected="@color/tab_plan"
+        barColorWhenSelected="@color/tab_default"
         icon="@drawable/ic_planning"
         id="@+id/tab_plan"/>
     <tab
-        barColorWhenSelected="@color/tab_girl"
+        barColorWhenSelected="@color/tab_default"
         icon="@drawable/ic_girl"
         id="@+id/tab_girl"/>
     <tab
-        barColorWhenSelected="@color/tab_write"
+        barColorWhenSelected="@color/tab_default"
         icon="@drawable/ic_write"
         id="@+id/tab_write"/>
     <tab
-        barColorWhenSelected="@color/tab_boy"
+        barColorWhenSelected="@color/tab_default"
         icon="@drawable/ic_boy"
         id="@+id/tab_boy"/>
     <tab
-        barColorWhenSelected="@color/tab_setting"
+        barColorWhenSelected="@color/tab_default"
         icon="@drawable/ic_settings"
         id="@+id/tab_setting"/>
 </tabs>
