--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,13 @@
     <color name="default_background">#fafafa</color>
     <color name="default_font">#9b9b9b</color>
 
+    <color name="tab_default">#373740</color>
     <color name="tab_plan">#b2caff</color>
     <color name="tab_girl">#ffb2c5</color>
     <color name="tab_write">#acf9cb</color>
     <color name="tab_boy">#d097e5</color>
     <color name="tab_setting">#f7cc76</color>
+    <color name="tab_active">#ff4181</color>
 
     <color name="bg_plan">#b2caff</color>
     <color name="bg_girl">#ffb2c5</color>
