--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -5,4 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <TextView
+            style="@style/TopTextView"
+            android:text="@string/title_setting"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/VerticalLinearLayout"
+        android:layout_weight="10">
+
+    </LinearLayout>
+
 </LinearLayout>
