--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="bg_write">#acf9cb</color>
     <color name="bg_boy">#d097e5</color>
     <color name="bg_setting">#f7cc76</color>
+    <color name="bg_tint_fab">#ffffff</color>
 
     <color name="btn_bottom_item">#d6cfcf</color>
     <color name="btn_gender">#ffffff</color>
@@ -38,4 +39,6 @@
 
     <color name="box_helper">#93b8ff</color>
     <color name="box_primary">#baffd1</color>
+
+    <color name="progressbar_default">#373740</color>
 </resources>
