--- a/app/src/main/res/layout/fragment_collect.xml
+++ b/app/src/main/res/layout/fragment_collect.xml
@@ -16,7 +16,8 @@
             android:id="@+id/tv_letter"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:padding="10dp"/>
 
     </LinearLayout>
 
