--- a/app/src/main/res/layout/item_expand.xml
+++ b/app/src/main/res/layout/item_expand.xml
@@ -10,6 +10,34 @@
 
     <LinearLayout
         style="@style/VerticalLinearLayout"
+        android:layout_weight="3">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/tv_month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                tools:text="10월"/>
+
+            <TextView
+                android:id="@+id/tv_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="12dp"
+                android:textSize="17sp"
+                tools:text="21"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/VerticalLinearLayout"
         android:layout_weight="7">
 
         <TextView
@@ -20,21 +48,6 @@
             android:textSize="9sp"
             tools:ignore="SmallSp"
             tools:text="This is test code."/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        style="@style/VerticalLinearLayout"
-        android:layout_weight="3"
-        android:gravity="center_vertical|end">
-
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:textSize="15sp"
-            tools:text="7일"/>
 
     </LinearLayout>
 
