--- a/app/src/main/res/layout/fragment_male.xml
+++ b/app/src/main/res/layout/fragment_male.xml
@@ -41,7 +41,7 @@
 
     <LinearLayout
         style="@style/VerticalLinearLayout"
-        android:layout_weight="8">
+        android:layout_weight="7">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -62,6 +62,11 @@
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_write"
                 style="@style/WriteFloatingActionButton"/>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_refresh"
+                style="@style/RefreshFloatingActionButton"
+                android:visibility="gone"/>
 
             <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/progressbar"
