--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="bg_boy">#d097e5</color>
     <color name="bg_setting">#f7cc76</color>
     <color name="bg_tint_fab">#ffffff</color>
+    <color name="bg_default">#ffffff</color>
 
     <color name="btn_bottom_item">#d6cfcf</color>
     <color name="btn_gender">#ffffff</color>
